# cli-engine

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/: argv0-dispatch.md  auth.md  completion.md  concepts.md  design.md  environments.md
docs/plans/: 2026-06-17-engine-environments-plan.md
docs/specs/: 2026-06-17-engine-environments-design.md
examples/: argv0.rs  basic.rs  typed.rs
src/: cli.rs  command.rs  config.rs  config_commands.rs  env_commands.rs  environments.rs  error.rs  feature_flags.rs  flag_commands.rs  flags.rs  fs.rs  guide.rs  lib.rs  middleware.rs  module.rs  search.rs  tier.rs  tree.rs
src/auth/: commands.rs  credential.rs  dispatcher.rs  exec.rs  mod.rs  pkce.rs  storage.rs
src/cli/: builtins.rs  completion.rs  help.rs  tree_render.rs
src/output/: envelope.rs  fields.rs  human.rs  json.rs  mod.rs  pipeline.rs  renderer.rs  schema.rs  toon.rs
src/transport/: client.rs  debug_logger.rs  injector.rs  mod.rs
tests/: argv0_dispatch.rs  completion.rs  config_file.rs  consumer_cli.rs  credential_store_config.rs  derive_bridge.rs  exhaustive_cli_contract.rs  exhaustive_output.rs  exhaustive_public_api.rs  feature_flags.rs  foundation.rs  output_format_config.rs  streaming.rs
