[package]
name = "cli-engine"
version = "0.3.5"
edition = "2024"
description = "Rust CLI framework for consistent command modules"
repository = "https://github.com/godaddy/cli-engine"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "framework", "clap", "schema"]
categories = ["command-line-interface"]

[workspace]
members = ["."]

[lib]
name = "cli_engine"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11"
keyring = { version = "3.6.1", optional = true, default-features = false }
open = { version = "5.3.2", optional = true }
rand = { version = "0.9", optional = true }
sha2 = { version = "0.10.9", optional = true }
url = { version = "2.5.4", optional = true }
zeroize = { version = "1.8", optional = true, features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive", "std", "string"] }
clap_complete = "4"
jmespath = "0.5.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
regex = "1.12.2"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml_edit = { version = "0.22", features = ["serde"] }
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.43"
termimad = "0.34.1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.1", optional = true, default-features = false, features = ["async-secret-service", "tokio", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.1", optional = true, default-features = false, features = ["apple-native"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6.1", optional = true, default-features = false, features = ["windows-native"] }

[features]
pkce-auth = ["dep:keyring", "dep:open", "dep:rand", "dep:sha2", "dep:url", "dep:zeroize"]

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
implicit_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"
